# findapartment

./: .env.example  .gitignore  .replit  pyproject.toml  replit.nix  requirements.txt
.github/workflows/: daily_search.yml
config/: config.example.yaml  config.yaml
data/: all_listings.csv  seed_listings.json
src/apartment_finder/: __init__.py  config.py  daily_fetch.py  db.py  main.py
src/apartment_finder/adapters/: __init__.py  base.py  bayut.py  boligportal.py  casasapo.py  craigslist.py  findproperties.py  idealista.py  lejebolig.py  propertyfinder.py  renthop.py  rumah123.py  streeteasy.py
src/apartment_finder/models/: __init__.py  apartment.py
src/apartment_finder/services/: __init__.py  currency.py  deduplication.py  email_sender.py  scoring.py
src/apartment_finder/utils/: __init__.py  logging.py  retry.py
src/apartment_finder/web/: app.py  db.py
src/apartment_finder/web/static/: index.html  listing.html
templates/: email_template.html
tests/: __init__.py  conftest.py  test_deduplication.py  test_models.py  test_scoring.py
